add underline to active page

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OPG Sedlar</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/navbar.css">
 </head>
@@ -15,9 +16,9 @@
         
         <div class="nav-links">
           <a href="about.html" class="hover-underline-animation">O nama</a>
-          <a href="javascript:void(0)" class="hover-underline-animation">Članovi</a>
-          <a href="javascript:void(0)" class="hover-underline-animation">Igra</a>
-          <a href="javascript:void(0)" class="hover-underline-animation">Kontakt</a>
+          <a href="members.html" class="hover-underline-animation">Članovi</a>
+          <a href="play.html" class="hover-underline-animation">Igra</a>
+          <a href="contact.html" class="hover-underline-animation">Kontakt</a>
         </div>
       </div>
       
