--- a/pages/index.html
+++ b/pages/index.html
@@ -42,7 +42,7 @@
 
 
     <footer>
-        <p>&copy;</p>
+        <p>&copy; 2024 OPG Sedlar</p>
     </footer>
 
     <script src="../scripts/script.js"></script>
