--- a/pages/about.html
+++ b/pages/about.html
@@ -41,9 +41,8 @@
 
 
     <footer>
-        <p>&copy;</p>
+        <p>&copy; 2024 OPG Sedlar</p>
     </footer>
-
     <script src="../scripts/script.js"></script>
 </body>
 </html>
