--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
 
 
     <footer>
-        <p>&copy;</p>
+        <p>&copy; 2024 OPG Sedlar</p>
     </footer>
 
     <script src="../scripts/script.js"></script>
