--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/navbar.css">
 </head>
 <body>
-    <video autoplay muted loop id="backgroundVideo">
+    <video autoplay muted loop class="backgroundVideo">
         <source src="../backgrounds/background.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
