--- a/pages/members.html
+++ b/pages/members.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../styles/navbar.css">
 </head>
 <body>
+    <video autoplay muted loop class="backgroundVideo">
+        <source src="../backgrounds/members.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
+
     <div id="navbar">
         <a href="index.html">
             <img src="../images/tractor.png" alt="logo" id="tractor-logo">
