add background to all pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="header">
-       <h1>Dobrodošli na OPG Sedlar</h1>
+       <h1 id="welcome-text">Dobrodošli </h1><h1 id="opg-text">OPG Sedlar</h1>
       </div>
 
       <div id="fact">
