--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../styles/navbar.css">
 </head>
 <body>
+    <video autoplay muted loop class="backgroundVideo">
+        <source src="../backgrounds/about_us.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
+
     <div id="navbar">
         <a href="index.html">
             <img src="../images/tractor.png" alt="logo" id="tractor-logo">
@@ -22,22 +27,6 @@
       </div>
       
       
-
-
-
-    <div id="main-page">
-        <section class="hero">
-            <h1>AAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consectetur quis libero. Repellendus, esse consequatur officia, sint provident iste, possimus blanditiis excepturi neque modi officiis quis architecto dolorem quibusdam dolore.</p>
-            <a href="services.html" class="btn">Our Services</a>
-            <img src="images/tractor.png" alt="">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sequi fuga fugiat, ad optio magnam quis quibusdam molestiae laudantium ipsum, eaque distinctio dolor adipisci ab omnis ratione ducimus rem quos.
-        </section>
-    </div>
-
-
-
-
 
 
     <footer>
