finished index page

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,19 +28,14 @@
       </div>
 
       <div class="header">
-       <h1 id="welcome-text">Dobrodošli </h1><h1 id="opg-text">OPG Sedlar</h1>
+       <h1 id="welcome-text">Dobrodošli </h1><h1 id="opg-text" class="transparent-text">OPG Sedlar</h1>
       </div>
 
       <div id="fact">
         <p></p>
       </div>
+      <br><br><br><br>
       
-      
-
-
-    <footer>
-        <p>&copy; 2024 OPG Sedlar</p>
-    </footer>
 
     <script src="../scripts/script.js"></script>
 </body>
