finish members page

--- a/pages/members.html
+++ b/pages/members.html
@@ -7,6 +7,7 @@
     <title>OPG Sedlar</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/members_page.css">
 </head>
 <body>
     <video autoplay muted loop class="backgroundVideo">
@@ -25,6 +26,34 @@
           <a href="play.html" class="hover-underline-animation">Igra</a>
           <a href="contact.html" class="hover-underline-animation">Kontakt</a>
         </div>
+      </div>
+
+      <div id="members">
+        <div class="member-card">
+          <h2>Ivan Sedlar</h2>
+          <p><i>1965</i></p>
+            <p> John Deere </p>
+            <p>🍉 Lubenice 🍉</p>
+          </div>
+          <div class="member-card">
+            <h2>Snježana Sedlar</h2>
+            <p><i>1973</i></p>
+            <p> Ferguson IMT </p>
+            <p>🥬 Kupus 🥬</p>
+          </div>
+          <div class="member-card">
+            <h2>Antonio Sedlar</h2>
+            <p><i>1994</i></p>
+            <p> Kubota </p>
+            <p>🥒 Tikvice 🥒</p>
+          </div>
+          <div class="member-card">
+            <h2>Matej Sedlar</h2>
+            <p><i>1992</i></p>
+            <p> Deutz Fahr </p>
+            <p>🥔 Krumpir 🥔</p>
+        </div>
+
       </div>
       
       
