--- a/pages/play.html
+++ b/pages/play.html
@@ -23,8 +23,7 @@
         <div class="nav-links">
           <a href="about.html" class="hover-underline-animation">O nama</a>
           <a href="members.html" class="hover-underline-animation">Članovi</a>
-          <a href="play.html" class="hover-underline-animation active">Igra</a>
-          <a href="contact.html" class="hover-underline-animation">Kontakt</a>
+          <a href="play.html" class="hover-underline-animation active">Kviz</a>
         </div>
       </div>
 
