--- a/pages/play.html
+++ b/pages/play.html
@@ -27,10 +27,10 @@
         </div>
       </div>
 
-      <div id="end-screen" class="hidden end-screen">
-        <h1 id="final-score">Vaš rezultat: 0</h1> <br><br>
+      <div id="end-screen" class="hidden">
+        <h1 id="final-score">Vaš rezultat: 0</h1>
+        
         <button id="restart-button" class="big-button">Ponovno igraj</button>
-
       </div>
 
       <button id="start-quiz" class="big-button">Pokreni kviz</button>
