move index.html to root

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OPG Sedlar</title>
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/navbar.css">
 </head>
 <body>
     <video autoplay muted loop class="backgroundVideo">
@@ -16,13 +16,13 @@
 
     <div id="navbar">
         <a href="index.html">
-            <img src="../images/tractor.png" alt="logo" id="tractor-logo">
+            <img src="/images/tractor.png" alt="logo" id="tractor-logo">
         </a>
         
         <div class="nav-links">
-          <a href="about.html" class="hover-underline-animation">O nama</a>
-          <a href="members.html" class="hover-underline-animation">Članovi</a>
-          <a href="play.html" class="hover-underline-animation">Kviz</a>
+          <a href="pages/about.html" class="hover-underline-animation">O nama</a>
+          <a href="pages/members.html" class="hover-underline-animation">Članovi</a>
+          <a href="pages/play.html" class="hover-underline-animation">Kviz</a>
         </div>
       </div>
 
@@ -36,6 +36,6 @@
       <br><br><br><br>
       
 
-    <script src="../scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
