--- a/pages/about.html
+++ b/pages/about.html
@@ -16,10 +16,10 @@
       </video>
 
     <div id="navbar">
-        <a href="index.html">
-            <img src="../images/tractor.png" alt="logo" id="tractor-logo">
-        </a>
-        
+        <a href="../index.html">
+          <img src="../images/tractor.png" alt="logo" id="tractor-logo">
+      </a>
+          
         <div class="nav-links">
           <a href="about.html" class="hover-underline-animation active">O nama</a>
           <a href="members.html" class="hover-underline-animation">Članovi</a>
