--- a/pages/members.html
+++ b/pages/members.html
@@ -16,9 +16,9 @@
       </video>
 
     <div id="navbar">
-        <a href="index.html">
-            <img src="../images/tractor.png" alt="logo" id="tractor-logo">
-        </a>
+        <a href="../index.html">
+          <img src="../images/tractor.png" alt="logo" id="tractor-logo">
+      </a>
         
         <div class="nav-links">
           <a href="about.html" class="hover-underline-animation">O nama</a>
