--- a/pages/play.html
+++ b/pages/play.html
@@ -16,7 +16,7 @@
       </video>
     <div id="navbar">
 
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../images/tractor.png" alt="logo" id="tractor-logo">
         </a>
         
