move index.html

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OPG Sedlar</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
 </head>
 <body>
     <video autoplay muted loop class="backgroundVideo">
-        <source src="../backgrounds/background.mp4" type="video/mp4">
+        <source src="backgrounds/background.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
 
     <div id="navbar">
         <a href="index.html">
-            <img src="/images/tractor.png" alt="logo" id="tractor-logo">
+            <img src="images/tractor.png" alt="logo" id="tractor-logo">
         </a>
         
         <div class="nav-links">
@@ -36,6 +36,6 @@
       <br><br><br><br>
       
 
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
