--- a/pages/about.html
+++ b/pages/about.html
@@ -33,21 +33,21 @@
 
       <main id="about_main">
         <div class="about_div">
-          <h1 class="transparent-text">Lokacija</h1>
+          <h1>Lokacija</h1>
           <div>
             Glavna 40, Prkovci
           </div>
         </div>
 
         <div class="about_div">
-          <h1 class="transparent-text">Djelatnosti</h1>
+          <h1>Djelatnosti</h1>
           <div>
             Uzgoj žitarica i povrća
           </div>
         </div>
 
         <div class="about_div">
-          <h1 class="transparent-text">Godina</h1>
+          <h1>Godina</h1>
           <div>
             2004
           </div>
