--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       </div>
       <br><br><br><br>
       
+      <footer>
+        <p>&copy; 2025 OPG Sedlar</p>
+    </footer>
 
     <script src="scripts/script.js"></script>
 </body>
