--- a/pages/about.html
+++ b/pages/about.html
@@ -56,6 +56,11 @@
         
 
       </main>
+
+      <footer>
+        <p>&copy; 2025 OPG Sedlar</p>
+    </footer>
+
     <script src="../scripts/script.js"></script>
 </body>
 </html>
